# hap-encoder-adobe-cc

./: .gitignore  .gitmodules  CMakeLists.txt  HapEncoderPlugin-macOS-installer.dist  README.md  license.txt  make_mac_installer.sh
asset/encoder_preset/: Hap Alpha-Only.epr  Hap Alpha.epr  Hap Q Alpha.epr  Hap Q.epr  Hap.epr
asset/encoder_preset/ame-12.0/: Hap Alpha.epr
asset/encoder_preset/ame-13.0/: Hap Alpha-Only.epr  Hap Alpha.epr  Hap Q Alpha.epr  Hap Q.epr  Hap.epr
codec/: CMakeLists.txt  codec.cpp  codec.hpp  texture_converter.cpp  texture_converter.hpp
doc/: CMakeLists.txt
doc/user_guide/: README.md
installer/: CMakeLists.txt  CodecInstaller.cmake  HapEncoderPlugin-macOS-installer.dist  NSIS.template.in  ReadMe.txt  make_mac_installer.sh  postinstall  preinstall
source/: CMakeLists.txt
source/after_effects/: output_module.cpp  output_module.h  output_module.r  ui.h
source/after_effects/mac/: FNDControlViewController.h  FNDObjC.h  SettingsViewController.xib  SettingsViewController.xib.in  ui.mm
source/after_effects/win/: output_module.rc  output_module_temp.rc  resource.h  ui.cpp
source/codec_registration/: CMakeLists.txt  codec_registration.hpp  util.cpp  util.hpp
source/plugin/: CMakeLists.txt
source/plugin/adobe_shared/: CMakeLists.txt
source/plugin/after_effects/: CMakeLists.txt  output_module.cpp  output_module.h
source/plugin/after_effects/mac/: FNDControlViewController.h  FNDControlViewController.m  MacOSXBundleInfo.plist.in  PkgInfo
source/plugin/after_effects/win/: output_module.rc
source/plugin/premiere/: CMakeLists.txt  async_importer.cpp  async_importer.hpp  export_settings.cpp  export_settings.hpp  file_import.rc  main.cpp  main.hpp  premiereImporter.cpp  premiereImporter.hpp  premiereParams.hpp  prstring.hpp
source/premiere_CC2018/: CMakeLists.txt  async_importer.cpp  async_importer.hpp  configure.hpp  export_settings.cpp  export_settings.hpp  freelist.hpp  hapencode.cpp  hapencode.hpp  importer.cpp  importer.hpp  main.cpp  premiereParams.cpp  prstring.cpp  prstring.hpp  sample_cache.hpp  string_conversion.cpp  string_conversion.hpp
source/premiere_CC2018/codec/: codec.cpp  codec.hpp  texture_converter.cpp  texture_converter.hpp
source/premiere_CC2018/exporter/: exporter.cpp  exporter.hpp
source/premiere_CC2018/movie/: ffmpeg_helpers.hpp  movie_reader.cpp  movie_reader.hpp
source/premiere_CC2018/movie_writer/: movie_writer.cpp  movie_writer.hpp
source/session/: CMakeLists.txt  exporter.cpp  exporter.hpp  importer.cpp  importer.hpp  movie_reader.hpp  movie_writer.cpp  movie_writer.hpp
